syntax = "proto3"; // Use the latest proto syntax
option csharp_namespace = "ElearnGrpc";
import "rpc_university.proto";

service UserService {
  rpc GetUserByName (Name) returns (UserModel);
  rpc GetUserByUsername (UserName) returns (UserModel);
  rpc CreateNewUser (UserModel) returns (UserModel);
  rpc GetUserByID(UserId) returns (UserModel);
  rpc UpdateUser(UserModel) returns (UserModel);
  rpc DeleteUser(UserModel) returns(Nothing);
}

message UserModel {
  int64 id = 1;
  string username = 2;
  string email = 3;
  string name = 4;
  string password =5;
  string role = 6;
  int32 securityLevel = 7;
  UniversityModel university = 8;
}

message UserId{
  int64 id = 1;
}

message Name {
  string name = 1;
}

message UserName {
  string username = 1;
}

message Nothing{}